cascade fix dersini bitirdik sınıfların,idlerin ve seçicilerin nasılbirbirini etkilediğini ve nasıl başa çıkacağımızı gördük

--- a/foundations/cascade/01-cascade-fix/index.html
+++ b/foundations/cascade/01-cascade-fix/index.html
@@ -8,15 +8,15 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <p class="para">I'm just a paragraph with extra bold text!</p>
-    <p class="para small-para">I'm a smaller paragraph, also with extra bold text!</p>
+    <p class="para">Ben sadece ekstra kalın yazı içeren bir paragrafım!</p>
+    <p class="para small-para">Ben daha küçük bir paragrafım, ayrıca ekstra kalın metinle!</p>
 
-    <button id="confirm-button" class="button confirm">Confirm</button>
-    <button id="cancel-button" class="button cancel">Cancel</button>
+    <button id="confirm-button" class="button confirm">Onaylamak</button>
+    <button id="cancel-button" class="button cancel">İptal</button>
 
-    <div class="text">I'm a div with thin text!</div>
-    <div class="text">I'm a div with thin text and a child div!
-      <div class="text child">I'm a smaller child div with extra bold text.</div>
+    <div class="text">Ben ince yazıya sahip bir div'im!</div>
+    <div class="text">Ben ince metinli bir div'im ve bir de çocuk div'im!
+      <div class="text child">Ben ekstra kalın metinli daha küçük bir çocuk bölümüyüm.</div>
     </div>
   </body>
 </html>
